# BattleFox

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-development.yml
.github/workflows/: build-and-deploy.yml  docker-ci-v2.yml  docker-ci.yml  rust.yml
battle_fox/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
battle_fox/configs/: README.md  mapvote.yaml  playermute.yaml  playerreport.yaml
battle_fox/src/: commands.rs  logging.rs  main.rs  mapmanager.rs  mapvote.rs  playermute.rs  playerreport.rs  players.rs  rabbitmq.rs  stv.rs  vips.rs  weaponforcer.rs
battle_fox/src/guard/: and.rs
battle_fox/src/mapmanager/: pool.rs
battle_fox/src/mapvote/: config.rs  matching.rs  prefixes.rs
battlefield_rcon/: Cargo.toml  README.md
battlefield_rcon/src/: bf4.rs  dropguard.rs  ea_guid.rs  lib.rs  macros.rs  mapvote.rs  rcon.rs
battlefield_rcon/src/bf4/: ban_list.rs  defs.rs  ea_guid.rs  error.rs  map_list.rs  player_cache.rs  player_info_block.rs  server_info.rs  team_scores.rs  util.rs  visibility.rs
battlefield_rcon/src/bf4/defs/: commorose.rs  map.rs  vis.rs
battlefield_rcon/src/rcon/: packet.rs
battlefox/: Cargo.toml  Dockerfile  Dockerfile.cross-platform
battlefox/configs/: admins.yaml  ban_enforcer.yaml  loadoutenforcer.yaml  mapman.yaml  mapvote.yaml  playermute.yaml  playerreport.yaml  teamkilling.yaml
battlefox/src/: admins.rs  ban_enforcer.rs  commands.rs  loadoutforcer.rs  main.rs  mapmanager.rs  mapvote.rs  playermute.rs  playerreport.rs  players.rs  stv.rs  teamkilling.rs  vips.rs  weaponforcer.rs
battlefox/src/mapmanager/: config.rs  pool.rs
battlefox/src/mapvote/: animate.rs  config.rs  matching.rs  prefixes.rs
battlefox/src/stv/: tracing.rs
battlefox_database/: Cargo.toml  Dockerfile  sqlx-data.json
battlefox_database/src/: adkats.rs  better.rs  lib.rs  main.rs  models.rs  schema.rs
battlefox_database/src/adkats/: bans.rs  mutes.rs  players.rs
battlefox_database/src/entities/: adkats_bans.rs  adkats_battlecries.rs  adkats_battlelog_players.rs  adkats_challenge_definition.rs  adkats_challenge_definition_detail.rs  adkats_challenge_entry.rs  adkats_challenge_entry_detail.rs  adkats_challenge_reward.rs  adkats_challenge_rule.rs  adkats_commands.rs  adkats_infractions_global.rs  adkats_infractions_server.rs  adkats_orchestration.rs  adkats_player_reputation.rs  adkats_records_debug.rs  adkats_records_main.rs  adkats_rolecommands.rs  adkats_rolegroups.rs  adkats_roles.rs  adkats_settings.rs  adkats_specialplayers.rs  adkats_statistics.rs  adkats_users.rs  adkats_usersoldiers.rs  battlemanager_roles.rs  battlemanager_userroles.rs  battlemanager_users.rs  bfacp_assigned_roles.rs  bfacp_migrations.rs  bfacp_options.rs  bfacp_password_reminders.rs  bfacp_permission_role.rs  bfacp_permissions.rs  bfacp_roles.rs  bfacp_sessions.rs  bfacp_settings_servers.rs  bfacp_settings_users.rs  bfacp_users.rs  bfacp_users_soldiers.rs  mod.rs  (+22 more)
battlefox_discord/: Cargo.toml  Dockerfile  Dockerfile.cross-platform  sqlx-data.json
battlefox_discord/src/: discordclient.rs  main.rs  rabbitmq.rs
battlefox_discord/tests/: rabbit_publish.rs
battlefox_shared/: Cargo.toml
battlefox_shared/src/: rabbitmq.rs
battlefox_shared/src/models/: mute.rs
battlefox_web/: Cargo.toml  Dockerfile  README.md
battlefox_web/frontend/: package.json
battlefox_web/frontend/src/: App.js  BlogDetails.js  Create.js  Home.js  Navbar.js  NotFound.js  index.css  useFetch.js
battlefox_web/src/: main.rs
battlelog/: Cargo.toml
battlelog/src/: apicalls.rs  battlelog.rs  ingame_metadata.rs  keeper.rs  lib.rs  main.rs  models.rs
battlelog/tests/: main.rs
bfox_web/: Cargo.toml  Dockerfile  README.md
bfox_web/frontend/: package.json
bfox_web/frontend/src/: BlogList.js
bfox_web/src/: main.rs
configs/: mapman.json  mapman.yaml  mapvote.json  mapvote.yaml
database/: Cargo.toml  Dockerfile
database/src/: lib.rs  main.rs  models.rs  schema.rs
discord-integration/: Cargo.toml
discord-integration/src/: main.rs
discord-integration/src/models/: report.rs
discord_integration/: Cargo.toml  Dockerfile
discord_integration/src/: discordclient.rs  main.rs  rabbitmq.rs  report_webhook.rs
discord_integration/tests/: rabbit_publish.rs
rabbit-publish-test/: Cargo.toml
rabbit-publish-test/src/: main.rs
rabbit_publish_test/: Cargo.toml
rabbit_publish_test/src/: main.rs
rcon_cli/: Cargo.toml  README.md
rcon_cli/src/: main.rs
shared/: Cargo.toml
shared/src/: events.rs  lib.rs  rabbitmq.rs
shared/src/models/: report.rs
src/: bf4.rs  cmd.rs  experiments.rs  frequentive.rs  guard.rs  humanlang.rs  lib.rs  lifeguard.rs  logging.rs  macros.rs  main.rs  maplist.rs  mapmanager.rs  mapvote.rs  minicache.rs  players.rs  rcon.rs  rounds.rs  stv.rs  vips.rs  weaponforcer.rs
src/guard/: or.rs  recent.rs
src/mapmanager/: config.rs  pool.rs
src/mapvote/: animate.rs  config.rs  matching.rs  prefixes.rs
src/rcon/: packet.rs
src/stv/: tracing.rs
