[package]
name = "battle_fox"
version = "0.1.0"
authors = ["Kiiya <snoewflaek@gmail.com>"]
edition = "2018"

[workspace]
members = ["battlefield_rcon"]

[profile.release]
lto = true
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
opt-level = 3 # AFAIK default is 2.
# panic = 'abort'     # Abort on panic. Supposedly helps reduzing binary size.

[dependencies]
# Cargo is smart enough to find a crate inside a bigger git repo.
# battlefield_rcon = { git = "https://github.com/Kiiyya/BattleFox", branch = "main" }
ascii = "1"
battlefield_rcon = { path = "battlefield_rcon" }
tokio = "1.2"
tokio-stream = "0.1"

dotenv = "0.15"

# for voting
num-rational = { version = "0.4.0", features = ["num-bigint"] }
num-traits = "0.2.14"
num-bigint = "0.4.0"

# for weird middleware stuff, inner(), etc.
async-trait = "0.1.42"
futures = "0.3.12"

either = "1.6"
multimap = "0.8"

frunk = "0.3"
