[package]
name = "battle_fox"
version = "0.2.2"
authors = ["Kiiya <snoewflaek@gmail.com>"]
edition = "2018"

[features]
compress_logs = ["flexi_logger/compress"]


[dependencies]
# Cargo is smart enough to find a crate inside a bigger git repo.
# battlefield_rcon = { git = "https://github.com/Kiiyya/BattleFox", branch = "main" }
ascii = { version = "1.0.0", features = ["serde"] }
battlefield_rcon = { path = "../battlefield_rcon" }
tokio = { version = "1.2", features = ["fs"] }
tokio-stream = "0.1"

dotenv = "0.15"

# for voting
num-rational = { version = "0.4.0", features = ["num-bigint", "serde"] }
num-traits = "0.2.14"
num-bigint = { version = "0.4.0", features = ["serde"] }

async-trait = "0.1.42"
futures = "0.3.12"

either = "1.6"
multimap = "0.8"

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
# serde_json = "1"
# ron = "0.6"
validator = { version = "0.13", features = ["derive"] }

itertools = "0.10" # for sorting...
rand = "0.8" # For randomly choosing maps from a pool.
lerp = "0.4"

# HashMap literals, very simple crate.
maplit = "1"
radix_trie = "0.2" # For shortest unique prefixes
cached = "0.23" # For shortest unique prefixes

# Stuff for logging
log = "0.4"
# humantime = "2.1"
flexi_logger = { version = "0.17", features = ["colors"] }
# backtrace = "0.3"
# yansi = "0.5"

simple_logger = "1" # just for tests actually

combine = "4.5" # Parser combinator for commands.

quickcheck = "1"
quickcheck_macros = "1"

shrinkwraprs = "0.3" # to deal with newtypes better
derive_more = "0.99" # general goodness

git-version = "0.3"

strsim = "0.10.0"
shared = { path = "../shared" }
