[package]
name = "battlefield_rcon"
version = "0.1.0"
authors = ["Kiiya <snoewflaek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["net", "sync", "rt", "rt-multi-thread", "macros", "io-util", "time"]}
ascii = "1.0.0"
async-stream = "0.3.0"
tokio-stream = { version = "0.1.3", features = ["sync"] }
futures-core = "0.3.12"
async-trait = "0.1.42"