[package]
name = "battlefield_rcon"
version = "0.1.0"
authors = ["Kiiya <snoewflaek@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "rcon-cli"

[features]
default = ["bf4"]
bf4 = []

# [profile.release]
# lto = true

[dependencies]
tokio = { version = "1.2.0", features = ["net", "sync", "rt", "rt-multi-thread", "macros", "io-util", "time"]}
ascii = { version = "1.0.0", features = ["serde"] }
async-stream = "0.3.0"
tokio-stream = { version = "0.1.3", features = ["sync"] }
futures-core = "0.3.12"
async-trait = "0.1.42"

lazy_static = "1.4"
# strsim = "0.10"

# for login.hashed
md5 = "0.7"

serde = {version = "1", features = ["derive"]}

log = "0.4"

[dev-dependencies]
serde_json = "1"
