[package]
name = "battlefox"
version = "0.2.7"
authors = ["Kiiya <snoewflaek@gmail.com>"]
edition = "2021"

[features]
compress_logs = ["flexi_logger/compress"]


[dependencies]
# Cargo is smart enough to find a crate inside a bigger git repo.
# battlefield_rcon = { git = "https://github.com/Kiiyya/BattleFox", branch = "main" }
ascii = { version = "1.0.0", features = ["serde"] }
battlefield_rcon = { path = "../battlefield_rcon" }
tokio = { version = "1.2", features = ["fs"] }
tokio-stream = "0.1"

dotenv = "0.15"
anyhow = "1.0.53"
thiserror = "1.0.30"

# for voting
num-rational = { version = "0.4.0", features = ["num-bigint", "serde"] }
num-traits = "0.2.14"
num-bigint = { version = "0.4.0", features = ["serde"] }

async-trait = "0.1.42"
futures = "0.3.12"

either = "1.6"
multimap = "0.8"

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

itertools = "0.10" # for sorting...
rand = "0.8" # For randomly choosing maps from a pool.
lerp = "0.4"

# HashMap literals, very simple crate.
maplit = "1"

# Stuff for logging
log = "0.4"
flexi_logger = { version = "0.17", features = ["colors"] }

# simple_logger = "1" # just for tests actually

git-version = "0.3"

strsim = "0.10.0"

lapin = { version = "1.7.1", default-features = false, features = ["rustls"] }
lazy_static = "1.4.0"
chrono = "0.4.19"
humantime = "2.1.0"

battlefox_shared = { path = "../battlefox_shared" }
battlefox_database = { path = "../battlefox_database" }
