[package]
name = "battlefox_database"
version = "0.2.6"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
thiserror = "1.0.31"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"

battlefox_shared = { path = "../battlefox_shared" }

sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "macros", "time", "offline", "tls" ] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
anyhow = "1.0.58"

