[package]
name = "battlefox_discord"
version = "0.2.6"
authors = ["Razer2015 <razer138@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.15"
chrono = "0.4.19"

# General-purpose utilities
log = "0.4.14"
simplelog = "0.10.0"
lazy_static = "1.4.0"
anyhow = { version = "1.0" }

serenity = { version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
battlelog = { path = "../battlelog" }
battlefox_shared = { path = "../battlefox_shared" }
battlefox_database = { path = "../battlefox_database" }

# amiquip = { version = "0.4", default-features = false }
lapin = { version = "1.7.1", default-features = false, features = ["rustls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
