[package]
name = "battlefox_shared"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lapin = { version = "1.7.1", default-features = false, features = ["rustls"] }
lazy_static = "1.4.0"
dotenv = "0.15"
anyhow = { version = "1.0" }
chrono = "0.4.19"
