[package]
name = "bfox_web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# general-purpose utilities
dotenv = "0.15.0"
itertools = "0.10"
maplit = "1"
serde = "1"
lazy_static = "1.4"
rand = "0.8.4"

# web server
rocket = { git = "https://github.com/Kiiyya/Rocket/", features = ["json"] }

# database (mongo) stuff for rocket
rocket_db_pools = { git = "https://github.com/Kiiyya/Rocket/", features = ["mongodb"] }
mongodb = "2.0.0"

