[package]
name = "database"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }

# DB Orm
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
