[package]
name = "discord_integration"
version = "0.1.0"
authors = ["Razer2015 <razer138@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.19"

serenity = { version = "0.10.8", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
battlelog = { path = "../battlelog" }

lazy_static = "1.4.0"

amiquip = { version = "0.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3.15"
