[package]
name = "rabbit_publish_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
anyhow = { version = "1.0" }

# amiquip = { version = "0.4", default-features = false }
lapin = { version = "1.7.1" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

shared = { path = "../shared" }
