[package]
name = "rcon_cli"
version = "0.1.0"
authors = ["Kiiya <snoewflaek@gmail.com>"]
edition = "2018"

[dependencies]
battlefield_rcon = { path = "../battlefield_rcon" }
tokio = { version = "1.2.0", features = ["net", "sync", "rt", "rt-multi-thread", "macros", "io-util", "time"]}
ascii = "1.0.0"
async-stream = "0.3.0"
tokio-stream = { version = "0.1.3", features = ["sync"] }
futures-core = "0.3.12"
async-trait = "0.1.42"

lazy_static = "1.4"
# strsim = "0.10"

# Just for rcon-cli. TODO: disable via feature flags when not compiling rcon-cli.
dotenv = "0.15.0"
crossterm = "0.19.0"
clap = "2.33.3"
